# VoxycAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  DDLUtils.cpp  DDLUtils.hpp  Globals.cpp  Globals.hpp  OvrApp.cpp  OvrApp.h  android.cpp  gvr.cpp  gvr.h  gvrgl.h  hello-jni.cpp  hellovr_opengl_main.cpp  javagl.cpp  javagl.h  main.cpp  main.h  native-lib.cpp  osx.cpp  osx.hpp  platform.cpp  platform.h  windows.cpp
app/src/main/cpp/engine/: AndroidAudio.cpp  AndroidAudio.h  Audio.cpp  Audio.h  BuildingWall.cpp  BuildingWall.h  Camera.cpp  Camera.h  Controls2.cpp  Controls2.h  EditorController.cpp  Engine2.cpp  Engine2.h  GLIncludes.h  GUI.cpp  GUI.h  Humanoid.cpp  Humanoid.h  HumanoidRenderer.cpp  HumanoidRenderer.h  LuaBridge.cpp  LuaBridge.h  Map.cpp  Map.h  Mesh.h  Model2.cpp  Model2.h  ModelRenderer.cpp  ModelRenderer.h  OBJWriter.cpp  Object.cpp  Object.h  OzzRenderer.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Shape.cpp  (+15 more)
app/src/main/cpp/game/: Editor.cpp  Editor.h  LuaProgram.cpp  VoxycApp.cpp  VoxycApp.h
app/src/main/java/com/voxyc/voxyc/: CustomRendererES20.java  HelloJni.java
gradle/wrapper/: gradle-wrapper.properties
